--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,6 @@
 {
   "parser": "@typescript-eslint/parser",
-  "extends": ["next/core-web-vitals", "next/typescript"],
+  "extends": ["next/core-web-vitals", "next/typescript", "plugin:prettier/recommended"],
   "rules": {
     "@next/next/no-img-element": "off",
     "@typescript-eslint/no-empty-interface": "off",
