--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prettier": "prettier --write ."
   },
   "engines": {
     "node": ">=18.20.3"
@@ -26,6 +27,8 @@
     "embla-carousel-react": "^8.3.0",
     "lucide-react": "^0.447.0",
     "next": "14.2.13",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
